adding the students corner page wit full functionality

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "yiisoft/yii2-app-basic",
     "description": "Yii 2 Basic Project Template",
     "keywords": ["yii2", "framework", "basic", "project template"],
-    "homepage": "http://localhost/udsm.ac.tz/web/",
+    "homepage": "http://www.yiiframework.com/",
     "type": "project",
     "license": "BSD-3-Clause",
     "support": {
@@ -18,12 +18,16 @@
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "kartik-v/yii2-widgets": "*",
         "warrence/yii2-kartikgii": "dev-master",
         "kartik-v/yii2-mpdf": "*",
         "kartik-v/yii2-tabs-x": "*",
         "mdmsoft/yii2-admin": "2.x-dev",
         "kartik-v/yii2-popover-x": "*",
-        "kartik-v/yii2-widget-sidenav": "*"
+        "miloschuman/yii2-highcharts-widget": "*",
+        "2amigos/yii2-ckeditor-widget": "^2.1",
+        "kartik-v/yii2-widget-fileinput": "@dev",
+        "yiisoft/yii2-imagine": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
